# aqua-engine

./: Cargo.toml  README.md
scenes/: cbox.json  integrator.json  room.json
src/: lib.rs  main.rs  shader.frag  shader.vert
src/core/: mod.rs  task.rs  vkw.rs
src/geometry/: mesh.rs  mod.rs  svo.rs  virtual_texture.rs
src/nn/: matrix.rs  mod.rs
src/render/: buffer.rs  camera.rs  compute_pass.rs  context.rs  gbuffer.rs  light.rs  mesh.rs  mod.rs  pipeline.rs  render_pass.rs  scene.rs  shader.rs  ssrt.rs  state.rs  svo.rs  texture.rs
src/render/pass/: gbuffer_pass.rs  mod.rs  post_process.rs  shadow.rs  shadow_map.rs  ssgi.rs
src/render/passes/: deferred.rs  gbuffer_pass.rs  mod.rs  shadow.rs  ssgi.rs
src/render_old/: buffer.rs  context.rs  mesh.rs  scene.rs  ssrt.rs  texture.rs
src/render_old/pass/: ssgi.rs
src/shaders/: bsdf.glsl  deferred.frag  deferred.vert  gbuffer.frag  gbuffer.glsl  gbuffer.vert  raytrace.glsl  shader.frag  shader.vert  shadow.frag  shadow.vert  shadow_map.comp  ssgi.trace.comp  ssgi.zquad.comp  ssrtao.glsl
