[package]
name = "arukas"
version = "0.1.0"
authors = ["shiinamiyuki <xiaochun.tong@mail.utoronto.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
winit = "0.22"
shaderc = "0.7"
env_logger = "0.7"
log = "0.4"
futures = "0.3"
nalgebra = "0.25.3"
nalgebra-glm = "0.11.0"
tobj = "2.0.4"
bytemuck = { version = "1.4", features = [ "derive" ] }

[dependencies.wgpu]
version = "0.7"
features = ["vulkan-portability"]

[[bin]]
name="arukas"
path="src/bin/arukas.rs"