[package]
name = "arukas"
version = "0.1.0"
authors = ["shiinamiyuki <xiaochun.tong@mail.utoronto.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = {version ="0.26.2", features = ["serde-serialize"] }
nalgebra-glm = "0.12.0"
rayon = "1.5.0"
image = "0.23.14"
rand = "0.8.3"

winit = "0.22"
shaderc = "0.7"
env_logger = "0.7"
log = "0.4"
futures = "0.3"
tobj = "2.0.4"
bytemuck = { version = "1.4", features = [ "derive" ] }
wgpu = "0.8.*"
akari = {version="*",git="https://github.com/shiinamiyuki/akari_render_rs"}

# [dependencies.wgpu]
# version = "0.7"
# features = ["vulkan-portability"]

[[bin]]
name="arukas"
path="src/bin/arukas.rs"