[package]
name = "arukas"
version = "0.1.0"
authors = ["shiinamiyuki <xiaochun.tong@mail.utoronto.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = {version ="0.26.2", features = ["serde-serialize"] }
nalgebra-glm = "0.12.0"
rayon = "1.5.0"
image = "0.23.14"
rand = "0.8.3"
serde = { version = "1.*", features = ["derive"] }
serde_json = "1.0"
bytemuck = {version = "1.7.*", features=["derive"]}
futures = "*"
ordered-float = "2.1.1"
bitflags = "1.2.1"
statrs = "0.14.0"
clap = "2.33.3"
tobj = "2.0.4"
lazy_static = "1.*"
ash = "0.33.3"
ash-window = "0.7.0"
vkc = {git = "https://github.com/shiinamiyuki/vkc" }
shaderc = {version = "0.7.2", optional = true}
log = "*"
indicatif = "0.16.2"
